--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
                     <div class="card-body">
                         <form id="query-form">
                             <div class="mb-3">
-                                <label for="query" class="form-label">Natural Language Query</label>
+                                <label for="query" class="form-label">User Query</label>
                                 <textarea class="form-control" id="query" rows="3" placeholder="e.g., Show me all customers who made purchases over $200 in the last month"></textarea>
                             </div>
                             
